<resources>
    <string name="app_name">Akira</string>
    <!-- First Setup Activity -->
    <string name="setup_enter_name">Enter your name here…</string>
    <string name="setup_enter_budget">Enter your monthly budget here…</string>
    <string name="setup_save">I\'m ready to go!</string>
    <string name="setup_welcome">Hello, and welcome to Akira!\n \nI\'m going to ask you some questions first, before we move on!</string>
    <string name="setup_input_request">What\'s your name and monthly budget you want to set?</string>
    <string name="setup_end">We\'re ready to go!</string>
    <string name="setup_select_currency">Select your currency</string>
    <string-array name="currency_options">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>CNY</item>
    </string-array>
    <!-- Home Fragment -->
    <string name="home_welcome_text">Welcome, %1$s!</string>
    <string name="home_remaining_budget_frame_text">%s %s</string>
    <string name="home_used_budget_text"><b>%1$.0f%%</b> of monthly budget used</string>
    <string name="home_no_budget_used_text">You haven\'t used your monthly budget yet</string>
    <string name="home_all_budged_used_text">You have used all your monthly budget</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_stats">Stats</string>
    <string name="navbar_stocks">Stocks</string>
    <string name="navigation_settings">Settings</string>
    <string name="home_daily_filter_button">Daily</string>
    <string name="home_weekly_filter_button">Weekly</string>
    <string name="home_monthly_filter_button">Monthly</string>
    <!-- Settings Fragment -->
    <string name="settings_header_text">Settings</string>
    <string name="settings_username">Current name</string>
    <string name="settings_budget">Current budget set</string>
    <string name="settings_notification_status">Toggle notifications</string>
    <string name="settings_notification_status_description">%s</string>
    <string name="settings_current_currency">Current currency</string>
    <string name="settings_currency_dialog_title">Select the desired currency</string>
    <string name="settings_api_key">Alpha Vantage API key</string>
    <string name="settings_api_key_status_description">%s</string>
    <string name="settings_disable_notifications_dialog_title">Disable Notifications</string>
    <string name="settings_disable_notifications_dialog_description">To disable notifications, please go to app settings and disable them.</string>
    <string name="transactions_deleted_success">All transactions deleted successfully</string>
    <string name="settings_notification_permission_denied_title">Notification permissions denied</string>
    <string name="settings_notification_permission_denied_message">To enable notifications, please allow the relative permissions in the app settings.</string>
    <string name="settings_app_version">App version</string>
    <!-- Create fragment -->
    <string name="create_header">Add a transaction</string>
    <string name="create_select_category_arrow">Select a category</string>
    <string name="create_icon_selector_description">Select the icon for your category</string>
    <string name="create_calendar_icon_description">Select a date for your expense</string>
    <string name="create_note_icon_description">Write notes to describe your transaction</string>
    <string name="create_expense_selector">Expense</string>
    <string name="create_revenue_selector">Revenue</string>
    <string name="create_cancel_button">Cancel your transaction</string>
    <string name="create_confirm_button">Create your transaction</string>
    <string name="create_category_hint">Select a category…</string>
    <string name="create_date">Select a date for the transaction here…</string>
    <string name="create_notes">Describe your transaction here…</string>
    <string name="create_amount_hint">00.00</string>
    <string name="dialog_select_category_title">Select a category for your transaction</string>
    <string name="dialog_select_category_new_hint">Or create a new one by writing its name here…</string>
    <string name="category_name_placeholder">Select or create a category</string>
    <!-- Stats Fragment -->
    <string name="stats_no_data_message">You don\'t have enough data to display statistics. Log more transactions!</string>
    <string name="stats_general_expenses_header">Expenses over this month</string>
    <string name="stats_general_revenue_header">Expenses over this month</string>
    <string name="stats_monthly_expenses_header">Expenses by category this month</string>
    <string name="stats_monthly_revenue_header">Revenues by category this month</string>
    <string name="stats_toggle_button_expenses">Show expenses</string>
    <string name="stats_toggle_button_revenues">Show revenues</string>
    <!-- Stocks Fragment -->
    <string name="stocks_disabled_view_text">This view is disabled because you need to set a Venture API key. \n\nGo to settings and set a valid key.</string>
    <string name="search_hint">Search stock or currency here…</string>
    <string name="stocks_header_text">Stocks</string>
    <!-- TransactionAdapter text -->
    <string name="expense_amount">-%1$.2f</string>
    <string name="earning_amount">+%1$.2f</string>
    <string name="transaction_date">%s</string>
    <!-- Custom Dialogs text -->
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_save_button">Save</string>
    <string name="dialog_edittext_hint">Enter a new value…</string>
    <string name="dialog_edit_transaction_title">Edit your transaction</string>
    <string name="dialog_edit_transaction_description">Description</string>
    <string name="dialog_edit_transaction_date_hint">Date</string>
    <string name="select_date">Select a date</string>
    <string name="dialog_edit_transaction_amount_hint">Transaction amount</string>
    <string name="settings_delete_all_transactions">Delete all transactions</string>
    <string name="dialog_delete_all_transactions_title">Delete all transactions</string>
    <string name="dialog_delete_all_transactions_description">Are you sure you want to delete all your registered transactions?</string>
    <string name="dialog_delete_all_transactions_confirm_button">Continue</string>
    <string name="settings_delete_all_transactions_description">Start on a fresh plate</string>
    <string name="dialog_edit_category">Transaction category</string>
</resources>
