<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/rounded_dialog_background">

    <TextView
        android:id="@+id/tvSpinnerDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings_currency_dialog_title"
        android:textSize="24sp"
        android:textColor="@color/primary_text"
        android:layout_marginBottom="16dp" />

    <Spinner
        android:id="@+id/currencySpinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_l"
        android:background="@color/tertiary_background"
        android:textAlignment="textStart" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            app:cornerRadius="16dp"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/accent_red"
            android:text="@string/dialog_cancel_button"
            android:textColor="@color/primary_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            app:cornerRadius="16dp"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/accent_blue"
            android:text="@string/dialog_save_button"
            android:textColor="@color/primary_text"
            android:layout_marginStart="@dimen/spacing_l" />

    </LinearLayout>
</LinearLayout>
