<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragments.HomeFragment">

    <!-- Buttons for Filtering Transactions -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/spacing_m"
        app:singleSelection="true"
        android:background="?android:attr/windowBackground">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_daily_filter_button"
            android:textColor="?android:attr/textColorPrimary"
            app:backgroundTint="@color/filter_button_selector" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_weekly_filter_button"
            android:layout_marginStart="@dimen/spacing_s"
            android:layout_marginEnd="@dimen/spacing_s"
            android:textColor="?android:attr/textColorPrimary"
            app:backgroundTint="@color/filter_button_selector" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_monthly_filter_button"
            android:textColor="?android:attr/textColorPrimary"
            app:backgroundTint="@color/filter_button_selector" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <FrameLayout
        android:id="@+id/circular_progress_frame"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_container">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circular_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            app:indicatorColor="@color/accent_red"
            app:indicatorSize="210dp"
            app:trackColor="@color/accent_green"
            app:trackThickness="11dp" />

        <TextView
            android:id="@+id/budget_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/home_remaining_budget_frame_text"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="?android:attr/textColorPrimary" />
    </FrameLayout>

    <!-- Used Budget Warning Text -->
    <TextView
        android:id="@+id/home_used_budget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circular_progress_frame"
        android:layout_marginTop="@dimen/spacing_m"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/home_used_budget_text" />

    <!-- Divider -->
    <View
        android:id="@+id/home_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/home_used_budget_text"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginStart="@dimen/spacing_m"
        android:layout_marginEnd="@dimen/spacing_m"
        android:background="@color/divider" />

    <!-- Expense List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeExpenseRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/home_divider"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/spacing_s"
        android:layout_marginBottom="@dimen/spacing_xl" />

</RelativeLayout>